# ai-projects

./: .gitignore
database-expert/: .env.example  .gitignore  README.md  db_expert.py  requirements.txt
financial-chatbot/: README.md  financial_chatbot.py  financial_chatbot_streamlit.py  main.py  pyproject.toml
multi-agent-financial-research/: .env.example  agent_system.py  main.py  market_news_article.txt  pyproject.toml  streamlit_app.py  streamlit_app_v1.py
